WOrd wrap fixes

--- a/src/scss/molecules/_social-card.scss
+++ b/src/scss/molecules/_social-card.scss
@@ -19,6 +19,7 @@
 	}
 	&__body {
 		padding: 0 20px 20px;
+		word-break: break-word;
 	}
 	&__footer {
 		padding: 20px;
